# pyats-kpi-calculator

./: .gitignore  AI_SESSION_GUIDE.md  BOOTSTRAP_TEMPLATE.py  README.md  bootstrap_project.py  kpi_calculator.py  kpi_models.yaml  pyproject.toml
tests/: test_calculator.py  test_parser.py  test_schema.py
