[tool.poetry]
name        = "pyats-kpi-calculator"
version     = "0.1.3"
description = "PyATS Offline KPI Calculator — Extract KPIs from captured NX-OS/IOS-XE/IOS-XR show command outputs"
readme      = "README.md"
packages    = [{include = "kpi_calculator.py"}]
keywords    = [
    "cisco",
    "pyats",
    "genie",
    "network-automation",
    "nxos",
    "iosxe",
    "iosxr",
    "kpi",
    "network-monitoring"
]

[tool.poetry.dependencies]
python              = ">=3.10,<4.0"
pyats               = ">=23.0"
genie               = ">=23.0"
"genie.libs.parser" = ">=23.0"
PyYAML              = ">=6.0"
schema              = ">=0.7.5"

[tool.poetry.group.dev.dependencies]
pytest        = ">=7.4"
pytest-cov    = ">=4.1"
ruff          = ">=0.1.0"
mypy          = ">=1.5"
types-PyYAML  = ">=6.0"

[tool.poetry.scripts]
kpi-calculator = "kpi_calculator:main"

[build-system]
requires      = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
verbosity = 2
addopts   = "--cov=kpi_calculator --cov-report=term-missing"

[tool.ruff]
line-length    = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version         = "3.10"
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true
